# CostCourter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_placeholder.py  0002_roles_notifications_audit.py  0003_user_scoped_catalog.py  0004_store_metadata.py  0005_product_metadata.py  0006_store_locale_currency.py  0007_price_history_notified.py
backend/app/: main.py  worker.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  database.py  logging.py
backend/app/fixtures/: __init__.py  reference.py  sample_catalog.py
backend/app/models/: __init__.py  app_setting.py  audit_log.py  base.py  notification_setting.py  passkey_credential.py  price_history.py  product.py  product_tag_link.py  product_url.py  role.py  search_cache.py  store.py  tag.py  user.py  user_identity.py  user_role_assignment.py
backend/app/schemas/: __init__.py  admin.py  auth.py  backup.py  catalog.py  notifications.py  pricing.py  search.py  user.py
backend/app/services/: __init__.py  audit.py  auth.py  catalog.py  catalog_backup.py  dashboard_metrics.py  health.py  notification_preferences.py  notifications.py  passkeys.py  passkeys_webauthn.py  price_cache.py  price_fetcher.py  pricing_dispatcher.py  pricing_schedule.py  product_bulk_import.py  product_quick_add.py  schedule_health.py  schedule_tracker.py  scrape_utils.py  search.py  search_cache.py  user.py
backend/app/tasks/: __init__.py  example.py  monitoring.py  pricing.py  search.py
backend/config/: celery_schedule.json
backend/notebooks/: catalog_explorer.py
backend/scripts/: __init__.py  manage.py
backend/scripts/migrations/: README.md  __init__.py  common.py  load_catalog.py  load_notifications.py  load_reference_data.py  load_users.py  validate_counts.py  validate_fks.py
backend/tests/: test_api_deps.py  test_audit_service.py  test_auth_services.py  test_catalog_backup.py  test_config.py  test_dashboard_metrics_service.py  test_database.py  test_fixtures.py  test_health.py  test_logging.py  test_manage_cli.py  test_migrations.py  test_models.py  test_monitoring_tasks.py  test_notification_preferences.py  test_notifications_service.py  test_passkeys_webauthn.py  test_price_cache.py  test_price_fetcher.py  test_price_tasks.py  test_pricing_dispatcher_service.py  test_pricing_schedule_logic.py  test_pricing_schedule_service.py  test_product_quick_add.py  test_schedule_health_service.py  test_schedule_tracker.py  test_scrape_utils.py  test_search_cache_service.py  test_search_service.py  test_search_tasks.py  test_tasks.py  test_worker.py
backend/tests/api/: conftest.py  test_auth.py  test_backups.py  (+8 more)
scraper/: Dockerfile  README.md  pyproject.toml
scraper/app/: main.py
scraper/tests/: test_scrub.py
(+99 files in other folders)
