[project]
name = "costcourter-scraper"
version = "0.1.0"
description = "Playwright-powered metadata scraper for CostCourter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.4,<0.116",
    "uvicorn>=0.30.6,<0.31",
    "playwright>=1.48.0,<1.49",
    "beautifulsoup4>=4.12.3,<5.0",
    "httpx>=0.27.2,<0.28",
    "pydantic>=2.9.2,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3,<9.0",
    "pytest-asyncio>=0.23.8,<0.24",
]

[tool.uv]
package = true

[tool.uv.sources]
costcourter-scraper = { path = "." }
